# tAhIni

./: README.md  pyproject.toml  requirements.txt
backend/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 155fcd28735a_init_schema_v3.py  2b815a37b581_reset_schema.py  3ad0d8cd761d_init_schema.py  51bae42483dd_update_models.py  5ecddf18669c_init_schema_v2.py  bffade732589_add_cascade_delete_to_uploads_user_id.py  ca5ee058ac74_update_user_and_examsessions_.py  d07f3b5e9f7a_add_nullable_author_id_attribute_to_.py  d1db46403e87_fix_uuid_consistency.py  fa910bb7ca97_add_curriculum_academicyear_and_.py
backend/src/: main.py
backend/src/agents/: parser.py
backend/src/db/: base.py  database.py  init_db.py  models.py
backend/src/dependencies/: candidate_session.py
backend/src/schemas/: auth.py  candidate_exam.py  exam.py  exam_schema.py  question.py  search.py  semester.py  storage.py  submission.py  user.py
backend/src/services/: analytics.py  answer.py  auth.py  candidate_exam.py  course.py  exam.py  gradelog.py  program.py  question.py  questions.py  semester.py  storage.py  submission.py  supabase_client.py  user.py
backend/src/utils/: embeddings.py  exam_code_generator.py  exceptions.py  jwt_handler.py  (+1 more)
backend/tests/: conftest.py  test_db_models.py
docs/00-introduction/: glossary.md  key-features.md  overview.md  why-tahini-exists.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  routes.tsx
(+82 files in other folders)
